Fixes to wpf project, TODO: logging, tests, persist

--- a/calendar/WpfApp2/WpfApp2/WpfApp2.csproj
+++ b/calendar/WpfApp2/WpfApp2/WpfApp2.csproj
@@ -116,6 +116,8 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="log4net.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
