--- a/calendar/WpfApp2/UnitTestProject1/App.config
+++ b/calendar/WpfApp2/UnitTestProject1/App.config
@@ -4,6 +4,37 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+	<log4net>
+		<root>
+			<level value="ALL" />
+			<appender-ref ref="MyAppender" />
+			<appender-ref ref="RollingFileAppender" />
+		</root>
+		<appender name="MyAppender" type="log4net.Appender.ConsoleAppender">
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date %level %logger - %message%newline" />
+			</layout>
+		</appender>
+		<appender name="MyFileAppender" type="log4net.Appender.FileAppender">
+			<file value="application.log" />
+			<appendToFile value="true" />
+			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date %level %logger - %message%newline" />
+			</layout>
+		</appender>
+		<appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
+			<file value="rolling.log" />
+			<appendToFile value="true" />
+			<rollingStyle value="Size" />
+			<maxSizeRollBackups value="5" />
+			<maximumFileSize value="10MB" />
+			<staticLogFileName value="true" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date [%thread] %level %logger - %message%newline" />
+			</layout>
+		</appender>
+	</log4net>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
