--- a/calendar/WpfApp2/UnitTestProject1/packages.config
+++ b/calendar/WpfApp2/UnitTestProject1/packages.config
@@ -4,5 +4,6 @@
   <package id="MockEF.Rhino" version="0.0.4.1" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.1.18" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.1.18" targetFramework="net461" />
+  <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net461" />
 </packages>
