dodanie wrapera dla deserializowania daty, zmiana connectionstring

--- a/asp.net-mvc/calendar-backend/Web.config
+++ b/asp.net-mvc/calendar-backend/Web.config
@@ -79,7 +79,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="CalendarContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=calendar_backend.CalendarContexta;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="Storage" connectionString="data source=localhost;initial catalog=calendar;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Storage" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=calendar_backend.calendar;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
