Nieudana próba dodania loggera

--- a/asp.net-mvc/calendar-backend/Web.config
+++ b/asp.net-mvc/calendar-backend/Web.config
@@ -7,6 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+	<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -81,4 +82,31 @@
   <connectionStrings>
     <add name="Storage" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=calendar_backend.calendar;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
+	
+
+	<log4net debug="true">
+		<appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+			<file value="C:\\TestProj\\TestLog.txt" />
+			<appendToFile value="true" />
+			<rollingStyle value="Size" />
+			<maxSizeRollBackups value="10" />
+			<maximumFileSize value="10MB" />
+			<staticLogFileName value="true" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%-5p %d %5rms %-22.22c{1} %-18.18M - %m%n" />
+			</layout>
+		</appender>
+
+		<appender name="MyAppender" type="log4net.Appender.ConsoleAppender">
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date %level %logger - %message%newline" />
+			</layout>
+		</appender>
+		
+		<root>
+			<level value="DEBUG" />
+			<appender-ref ref="RollingLogFileAppender" />\
+			<appender-ref ref="MyAppender" />
+		</root>
+	</log4net>
 </configuration>
