--- a/asp.net-mvc/calendar-backend/Web.config
+++ b/asp.net-mvc/calendar-backend/Web.config
@@ -8,6 +8,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 	<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -80,7 +81,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Storage" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=calendar_backend.calendar;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+    <add name="Storage" connectionString="Data Source=base.ii.pw.edu.pl; Integrated Security=False; User ID=NTR; Password=sisharp2017Z; Database=NTR2017Z;" providerName="System.Data.SqlClient" /> 
   </connectionStrings>
 	
 
